# LSM6DSOX

./: CMakeLists.txt
include/: LSM6DSOXSensor.h
src/: LSM6DSOXSensor.cpp  LSM6DSOXSensor.h  lsm6dsox_reg.h
